deploy: 779206b77bbe92d73b9ba2782ffa17a610051619

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "f7e60dc12532dced9b1d975d0c843317",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.20/wvd.zip",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.20",
-  "release_date": "2025-11-16 10:50:06",
-  "version": "1.9.20"
+  "md5": "19b7071e6acac5b696388df8c274fbaa",
+  "version": "1.9.20",
+  "release_date": "2025-11-16 11:06:23",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.20"
 }
