deploy: 4eab38e633bf8619cc7ac320dcf0ae16769f3849

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2025-12-22 14:23:55",
-  "md5": "d7d57b65d60d1290f8c08ae1e0f7d814",
-  "version": "1.9.26",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.26",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.26/wvd.zip"
+  "md5": "bcb75c6923488bae3e19711792c11298",
+  "version": "1.9.27",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.27",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.27/wvd.zip",
+  "release_date": "2025-12-22 15:07:49"
 }
