deploy: 9c59d5cf4a0ea64568c14e34a2c866fa5f3b016a

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "bcb75c6923488bae3e19711792c11298",
-  "version": "1.9.27",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.27",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.27/wvd.zip",
-  "release_date": "2025-12-22 15:07:49"
+  "version": "1.9.28",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.28/wvd.zip",
+  "release_date": "2025-12-22 23:33:33",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.28",
+  "md5": "818b74441b0438d403feff6b172557d3"
 }
