--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "version": "1.9.28",
+  "md5": "09f80cd81a7a560a70dc1413d122f8fe",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.28/wvd.zip",
-  "md5": "aeb221cc640dccd563002060ae4714c3",
-  "release_date": "2025-12-22 23:42:53",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.28",
-  "version": "1.9.28"
+  "release_date": "2025-12-22 23:55:50"
 }
