--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.28",
-  "md5": "ee1a00c1f4a7da4c71e6f3c14cfd8b3b",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.28/wvd.zip",
   "version": "1.9.28",
-  "release_date": "2025-12-23 02:38:19"
+  "md5": "750c511692b4fe08eef648f870ae7b99",
+  "release_date": "2025-12-23 03:03:50",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.28/wvd.zip"
 }
