--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.28/wvd.zip",
+  "md5": "5637272f51a8f742717fdccc586d4299",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.28",
   "version": "1.9.28",
-  "md5": "750c511692b4fe08eef648f870ae7b99",
-  "release_date": "2025-12-23 03:03:50",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.28/wvd.zip"
+  "release_date": "2025-12-23 03:07:07"
 }
