deploy: 5c46584b83c7f44e57e600c860fa197ab97375c8

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.28/wvd.zip",
-  "md5": "5637272f51a8f742717fdccc586d4299",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.28",
-  "version": "1.9.28",
-  "release_date": "2025-12-23 03:07:07"
+  "release_date": "2025-12-23 22:57:56",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.29/wvd.zip",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.29",
+  "md5": "98d91662be542fabafca8fe0dd86c134",
+  "version": "1.9.29"
 }
