--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2025-12-24 05:58:55",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.30/wvd.zip",
+  "md5": "094436ac432996eef01baebd8cbe1d3f",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.30",
-  "md5": "3d87e915c147dbc8b73028995b2d65e3",
-  "version": "1.9.30"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.30/wvd.zip",
+  "version": "1.9.30",
+  "release_date": "2025-12-24 05:59:39"
 }
