--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2025-12-24 12:33:25",
-  "md5": "66fc797cf6023c2930d7cf81cebfeafe",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.30",
+  "version": "1.9.30",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.9.30/wvd.zip",
-  "version": "1.9.30"
+  "md5": "aee235ea22f25fcb52b593f16b42c1c7",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.9.30",
+  "release_date": "2025-12-24 12:38:25"
 }
