--- a/.github/workflows/build-executable.yml
+++ b/.github/workflows/build-executable.yml
@@ -46,16 +46,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.9'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        # Install av (PyAV) first with pre-built wheel - requires no FFmpeg dev libs
-        pip install av --only-binary=av
-        # Install pyscrcpy separately to ensure av is available
-        pip install pyscrcpy
-        # Install remaining dependencies
+        python -m pip install --upgrade pip wheel
+        pip install av pyscrcpy
         pip install -r requirements.txt pyinstaller
 
     - name: Build with PyInstaller
