--- a/.github/workflows/build-executable.yml
+++ b/.github/workflows/build-executable.yml
@@ -46,12 +46,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel
-        pip install av pyscrcpy
+        python -m pip install --upgrade pip
         pip install -r requirements.txt pyinstaller
 
     - name: Build with PyInstaller
