deploy: e45ebaaea763873074d5df839e49c37eee0da8aa

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.0",
   "version": "1.10.0",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.0/wvd.zip",
-  "release_date": "2025-12-25 01:47:33",
-  "md5": "ebf1a74f1282b67d6312255dedcbc457",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.0"
+  "md5": "4410e19675279a928e4e444e96140746",
+  "release_date": "2025-12-25 02:26:59"
 }
