--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.0",
-  "version": "1.10.0",
+  "release_date": "2025-12-25 10:25:31",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.0/wvd.zip",
-  "md5": "4410e19675279a928e4e444e96140746",
-  "release_date": "2025-12-25 02:26:59"
+  "md5": "f489802f112e7b65d47c4290537a7454",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.0",
+  "version": "1.10.0"
 }
