--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2025-12-25 10:25:31",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.0/wvd.zip",
-  "md5": "f489802f112e7b65d47c4290537a7454",
+  "version": "1.10.0",
+  "release_date": "2025-12-25 13:13:29",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.0",
-  "version": "1.10.0"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.0/wvd.zip",
+  "md5": "4c63b2c7af6747a4ae16f6c1388cabf4"
 }
