deploy: d7d1ba99c7c5074dd6d68ec9f3c583b569e425da

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.1/wvd.zip",
-  "md5": "f66bbe2bd176684dfc69959b21f4bd14",
-  "release_date": "2025-12-26 11:19:21",
-  "version": "1.10.1",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.1"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.2",
+  "version": "1.10.2",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.2/wvd.zip",
+  "md5": "b1bf07e5cc5aa52fc2f01083790ee4dc",
+  "release_date": "2025-12-26 11:32:35"
 }
