deploy: a0d781a54f83b6515be88f9727f47f2594ed2457

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.28/wvd.zip",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.28",
-  "md5": "73da4cc2c9d4c1a417592d3276ab63e4",
-  "version": "1.10.28",
-  "release_date": "2025-12-29 09:58:08"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.28/wvd.zip",
+  "release_date": "2025-12-29 10:02:03",
+  "md5": "c2cb7a4a33148ff00b60e9b808fd37ff",
+  "version": "1.10.28"
 }
