--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.28",
+  "md5": "ec9b5cd80ef14d48731292e9d424ba53",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.28/wvd.zip",
-  "release_date": "2025-12-29 10:02:03",
-  "md5": "c2cb7a4a33148ff00b60e9b808fd37ff",
-  "version": "1.10.28"
+  "release_date": "2025-12-29 10:15:20",
+  "version": "1.10.28",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.28"
 }
