--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "ec9b5cd80ef14d48731292e9d424ba53",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.28/wvd.zip",
-  "release_date": "2025-12-29 10:15:20",
-  "version": "1.10.28",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.28"
+  "version": "1.10.29",
+  "release_date": "2025-12-29 11:17:59",
+  "md5": "25e0080f0416966ad24554c20b02eea1",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.29",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.29/wvd.zip"
 }
