--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.10.29",
-  "release_date": "2025-12-29 11:17:59",
-  "md5": "25e0080f0416966ad24554c20b02eea1",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.29",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.29/wvd.zip"
+  "release_date": "2025-12-29 11:39:26",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.30",
+  "md5": "8cc76023f919a513b0834cbc1ccfd2b3",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.30/wvd.zip",
+  "version": "1.10.30"
 }
