deploy: 476ed846dacc61ed5a011af95bf14ba93c73a183

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2025-12-29 11:39:26",
+  "md5": "f3c4e8198221154fb3aa941a34a8a5eb",
+  "version": "1.10.30",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.30",
-  "md5": "8cc76023f919a513b0834cbc1ccfd2b3",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.30/wvd.zip",
-  "version": "1.10.30"
+  "release_date": "2025-12-30 00:31:40",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.30/wvd.zip"
 }
