deploy: fddcdae538b5949f950fe5efc8db86552640a26c

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "f3c4e8198221154fb3aa941a34a8a5eb",
-  "version": "1.10.30",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.30",
-  "release_date": "2025-12-30 00:31:40",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.30/wvd.zip"
+  "version": "1.10.31",
+  "release_date": "2025-12-30 13:07:19",
+  "md5": "dd7558b24321fd6c491d1ba271dd29c3",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.31/wvd.zip",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.31"
 }
