deploy: 32239ea9a9c4623915432774167a8b921fd8b8df

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
   "version": "1.10.31",
-  "release_date": "2025-12-30 13:07:19",
-  "md5": "dd7558b24321fd6c491d1ba271dd29c3",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.31",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.31/wvd.zip",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.31"
+  "md5": "37c5f79b02225dc2426f91488f9899c0",
+  "release_date": "2025-12-31 16:01:48"
 }
