--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.10.31",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.31",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.31/wvd.zip",
-  "md5": "37c5f79b02225dc2426f91488f9899c0",
-  "release_date": "2025-12-31 16:01:48"
+  "md5": "0e926d17b03102b236b5062c6ce85ba7",
+  "version": "1.10.47",
+  "release_date": "2026-01-01 10:08:12",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.47/wvd.zip",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.47"
 }
