deploy: acf7085804a7293805c316c330d6d97bf693dc47

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "0e926d17b03102b236b5062c6ce85ba7",
-  "version": "1.10.47",
-  "release_date": "2026-01-01 10:08:12",
+  "release_date": "2026-01-01 10:11:27",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.47",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.47/wvd.zip",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.47"
+  "md5": "88ffa11730c3a63a22fd1ec5a15acd71",
+  "version": "1.10.47"
 }
