--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2026-01-01 10:11:27",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.47",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.47/wvd.zip",
-  "md5": "88ffa11730c3a63a22fd1ec5a15acd71",
-  "version": "1.10.47"
+  "md5": "0fae53cdce77e1efdbd6cc03bf9cd29d",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.10.49/wvd.zip",
+  "version": "1.10.49",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.10.49",
+  "release_date": "2026-01-02 05:05:28"
 }
