--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.11.4",
-  "md5": "9de8d8b1b847320ba9a8048c746ea4bc",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.4",
+  "release_date": "2026-01-03 09:36:59",
+  "version": "1.11.4",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.4/wvd.zip",
-  "release_date": "2026-01-03 09:34:49"
+  "md5": "a37c5be5a1157736a9426dffcc27635f"
 }
