--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "md5": "16182370848f0331a2e8646501a993e3",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.4",
-  "release_date": "2026-01-03 09:36:59",
   "version": "1.11.4",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.4/wvd.zip",
-  "md5": "a37c5be5a1157736a9426dffcc27635f"
+  "release_date": "2026-01-03 09:42:28"
 }
