deploy: 1e7f828694c73b9ed1196c72209cda195b5a6c1f

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "16182370848f0331a2e8646501a993e3",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.4",
-  "version": "1.11.4",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.4/wvd.zip",
-  "release_date": "2026-01-03 09:42:28"
+  "release_date": "2026-01-03 09:48:59",
+  "md5": "a70b5a394340e6910127fa06f5eb3e5c",
+  "version": "1.11.6",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.6/wvd.zip",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.6"
 }
