deploy: c533034ac876c142944d99c5ee65fb766cb8be9a

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2026-01-03 09:48:59",
-  "md5": "a70b5a394340e6910127fa06f5eb3e5c",
-  "version": "1.11.6",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.6/wvd.zip",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.6"
+  "release_date": "2026-01-03 09:51:16",
+  "md5": "eee9e3217b4ed5792d4924a40492bb61",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.6",
+  "version": "1.11.6"
 }
