--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.7",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.7/wvd.zip",
-  "md5": "b2612c661762003f779b9ab3f94baf33",
-  "release_date": "2026-01-03 13:41:31",
-  "version": "1.11.7"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.7",
+  "version": "1.11.7",
+  "release_date": "2026-01-04 04:34:25",
+  "md5": "cd54a8388cb7b0a76d2bf57f13476a0c"
 }
