--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2026-01-04 04:39:39",
-  "version": "1.11.8",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.8/wvd.zip",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.8",
-  "md5": "ab26dadd71a38ef32d11a37ea16b407e"
+  "md5": "5896113cf2926b0268d6d46ae2226fb8",
+  "release_date": "2026-01-05 02:50:20",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.10",
+  "version": "1.11.10"
 }
