--- a/.github/workflows/build-executable.yml
+++ b/.github/workflows/build-executable.yml
@@ -51,6 +51,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install av --only-binary=:all:
         pip install -r requirements.txt pyinstaller
 
     - name: Build with PyInstaller
