deploy: 0c164860a64449fdda72c16557c4613d8362cfbf

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "5896113cf2926b0268d6d46ae2226fb8",
-  "release_date": "2026-01-05 02:50:20",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip",
+  "md5": "0df1bbc305723aabc8454e8845b9b686",
+  "version": "1.11.10",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.10",
-  "version": "1.11.10"
+  "release_date": "2026-01-05 03:11:36"
 }
