deploy: 3e8ef1ef750fc3bb357b8c6800cb2d10fd510278

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.10",
-  "md5": "f6a30192f1f40f669d67842da5029912",
-  "release_date": "2026-01-05 04:17:30",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip",
+  "md5": "9c1cffb3eefffb8226b76911dc50ccf5",
   "version": "1.11.10",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip"
+  "release_date": "2026-01-05 04:38:32"
 }
