--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "release_date": "2026-01-05 06:15:48",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.10",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip",
-  "md5": "9c1cffb3eefffb8226b76911dc50ccf5",
   "version": "1.11.10",
-  "release_date": "2026-01-05 04:38:32"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip",
+  "md5": "9ed0e5724d014dc210563539d3996295"
 }
