deploy: 8c394f139d70c9af6b57675b020ef4bfb7493fdb

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "md5": "cb2617123faef6e16ca3c5205d5ad1ce",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.10",
-  "md5": "e73bc75f40e58522044302cf77e4dca8",
-  "release_date": "2026-01-05 11:30:20",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip",
-  "version": "1.11.10"
+  "version": "1.11.10",
+  "release_date": "2026-01-05 14:59:12",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.10/wvd.zip"
 }
