--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2026-01-05 15:04:44",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.11",
-  "version": "1.11.11",
-  "md5": "36fa886d8513706a15082dfb1cd12824",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.11/wvd.zip"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.12",
+  "md5": "7d4fa63a9498bee871b39a60bc46ea75",
+  "release_date": "2026-01-05 15:15:18",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.12/wvd.zip",
+  "version": "1.11.12"
 }
