--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.11.11",
-  "md5": "27e47c85abf165a2d40d4b79aff068a7",
-  "release_date": "2026-01-05 15:40:34",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.11",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.11/wvd.zip"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.12/wvd.zip",
+  "release_date": "2026-01-07 09:41:41",
+  "md5": "ea85f9faaf64c0417d33abebbeeff113",
+  "version": "1.11.12",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.12"
 }
