deploy: c4ec74f13bbfa7a6ab6b760bba50869a3c82d9ae

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.12/wvd.zip",
-  "release_date": "2026-01-07 09:41:41",
-  "md5": "ea85f9faaf64c0417d33abebbeeff113",
   "version": "1.11.12",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.12"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.12",
+  "md5": "d02fef434fb9f88af9c915483e8443b7",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.12/wvd.zip",
+  "release_date": "2026-01-07 09:46:23"
 }
