deploy: f97726b570c2fd56098fde217e9890304809f067

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.12/wvd.zip",
-  "release_date": "2026-01-07 10:08:25",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.12",
-  "md5": "e7507b062b531481eb3d8c977c2c93ae",
-  "version": "1.11.12"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.12/wvd.zip",
+  "version": "1.11.12",
+  "release_date": "2026-01-07 10:16:12",
+  "md5": "09e4c97e542a5278743cd79fe646fe56"
 }
