--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.11.13",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.13",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.13/wvd.zip",
-  "md5": "d68cab4e90ae631390a46db570e3995c",
-  "release_date": "2026-01-07 13:50:43"
+  "version": "1.11.14",
+  "release_date": "2026-01-08 08:56:20",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.14/wvd.zip",
+  "md5": "cbf05ffc6806d563d17a6be808275ec0",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.14"
 }
