chore: exclude non-program folders and files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,10 @@ src/*
 # Web UI & Editor (Local only)
 /editor/
 /web_prototype/
+/detect/
+/doc/
+/test_minimap_package/
+/.agent/
+/巫术.png
+/wvd.spec
 
