--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.15/wvd.zip",
-  "md5": "d01429e823e0032305ddd3e197682dfe",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.15",
-  "version": "1.11.15",
-  "release_date": "2026-01-08 15:30:15"
+  "md5": "bc8df39f4bdf45380c68831e4334ec31",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.16/wvd.zip",
+  "version": "1.11.16",
+  "release_date": "2026-01-09 06:32:25",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.16"
 }
