feat(ci): 整合 editor-lite 編輯器到 GitHub Actions 打包流程
- 新增 Node.js 安裝步驟
- 新增編輯器前端編譯步驟 (npm ci + npm run build)
- 新增 DungeonEditor.exe 打包步驟 (PyInstaller)
- 修改最終壓縮步驟，將 editor-lite/ 加入發布包
- 加入編輯器前端源碼到版控
- 更新 .gitignore 排除 CI 產出檔案

--- a/.github/workflows/build-executable.yml
+++ b/.github/workflows/build-executable.yml
@@ -61,11 +61,44 @@ jobs:
         pyinstaller --onedir --noconsole --noconfirm --add-data "resources;resources/" --hidden-import=pyscrcpy --hidden-import=pyscrcpy.core --hidden-import=av --hidden-import=adbutils --hidden-import=deprecation --hidden-import=retry2 --hidden-import=loguru --collect-all=pyscrcpy --collect-all=adbutils --collect-all=av src/main.py -n wvd
         Write-Host "Build completed successfully."
 
+    # --- Editor-Lite 打包步驟 ---
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Build Editor Frontend
+      shell: pwsh
+      run: |
+        cd editor/release/DungeonScriptEditor-win32-x64/resources/app
+        npm ci
+        npm run build
+        Write-Host "Editor frontend build completed."
+
+    - name: Build DungeonEditor.exe
+      shell: pwsh
+      run: |
+        cd editor-lite
+        # 從前端源碼複製最新編譯結果
+        Copy-Item -Path "../editor/release/DungeonScriptEditor-win32-x64/resources/app/dist/*" -Destination "./dist" -Recurse -Force
+        # 打包成執行檔
+        pyinstaller --onefile --name DungeonEditor --noconsole start_editor.py
+        Move-Item -Path "dist/DungeonEditor.exe" -Destination "." -Force -ErrorAction SilentlyContinue
+        Remove-Item -Path "build", "DungeonEditor.spec" -Recurse -Force -ErrorAction SilentlyContinue
+        Write-Host "DungeonEditor.exe build completed."
+
     - name: Compress build artifact to ZIP
       shell: pwsh
       run: |
-        # Copy changelog into the build directory before zipping
+        # 複製 changelog
         Copy-Item -Path './CHANGES_LOG.md' -Destination './dist/wvd/' -Force
+        
+        # 複製 editor-lite 資料夾（包含 exe 和 dist）
+        New-Item -ItemType Directory -Path './dist/wvd/editor-lite' -Force
+        Copy-Item -Path './editor-lite/DungeonEditor.exe' -Destination './dist/wvd/editor-lite/' -Force
+        Copy-Item -Path './editor-lite/dist' -Destination './dist/wvd/editor-lite/' -Recurse -Force
+        
+        # 壓縮
         Compress-Archive -Path ./dist/wvd/* -DestinationPath ./dist/wvd.zip -Force
         Get-ChildItem dist/wvd.zip
 
