--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "bc8df39f4bdf45380c68831e4334ec31",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.16/wvd.zip",
-  "version": "1.11.16",
-  "release_date": "2026-01-09 06:32:25",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.16"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.16",
+  "release_date": "2026-01-09 12:23:32",
+  "md5": "4759c8580f06e0fae9f45adc8af3b452",
+  "version": "1.11.16"
 }
