deploy: 7610ccdf2664fa750a82fedc68a6f9b50c2583d4

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
+  "release_date": "2026-01-09 12:44:15",
+  "version": "1.11.17",
+  "md5": "557fb1b656b52bb7ff2c8f0699ee33bc",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.17/wvd.zip",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.17",
-  "md5": "f9c353b8a15fdf87fb88702fd6966d6c",
-  "release_date": "2026-01-09 12:30:06",
-  "version": "1.11.17"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.17"
 }
