deploy: 37ac52e4996c0b85e4cd8b5947d674c7cecd5799

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.17",
-  "release_date": "2026-01-09 13:08:06",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.17/wvd.zip",
+  "release_date": "2026-01-09 13:14:54",
+  "md5": "26ee27ecef64432c3a6c83e1bee61b65",
   "version": "1.11.17",
-  "md5": "417ffe30275bc42ccff3fd4611fd98ed"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.17"
 }
