deploy: 55710c1da5da173dce7b5ea9cc24238de77b3c08

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.17/wvd.zip",
-  "release_date": "2026-01-09 13:14:54",
-  "md5": "26ee27ecef64432c3a6c83e1bee61b65",
+  "release_date": "2026-01-09 13:48:30",
   "version": "1.11.17",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.17"
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.17",
+  "md5": "311c98a29a86d7df10ce14e01526c72e"
 }
