deploy: a7c90c6fea240cadc34e1bb5985142daf9536a47

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2026-01-09 16:29:10",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.17",
-  "md5": "007cffd7d23b7e32fd9756a2c8643747",
-  "version": "1.11.17",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.17/wvd.zip"
+  "version": "1.11.18",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.18/wvd.zip",
+  "release_date": "2026-01-11 08:08:27",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.18",
+  "md5": "6b8845ae7c29badd0eaa802a00ef3d8b"
 }
