--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.11.20",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.20",
-  "md5": "09ce1a9a46b1ab1a7c02aa3994276050",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.20/wvd.zip",
-  "release_date": "2026-01-13 13:40:26"
+  "md5": "db75c245a2feb59085f20021b6387abb",
+  "release_date": "2026-01-13 13:43:45",
+  "version": "1.11.20",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.20/wvd.zip"
 }
