--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "145bd19b26ec18dc2e8457c89c108e4e",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.21",
-  "release_date": "2026-01-15 14:15:19",
+  "md5": "9d2450ca615fd357a6a520b13abe6605",
   "version": "1.11.21",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.21/wvd.zip"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.21/wvd.zip",
+  "release_date": "2026-01-15 14:25:19"
 }
