--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
   "version": "1.11.22",
-  "md5": "a3c3d6e1bb5b16a4910a63380239fb66",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.22/wvd.zip",
+  "release_date": "2026-01-16 03:23:31",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.22",
-  "release_date": "2026-01-16 03:11:31",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.22/wvd.zip"
+  "md5": "cfd966325d6acabd00645c6817080b7b"
 }
