deploy: f11d74d1589654c4ca0fd96743532086d0e458e6

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.23/wvd.zip",
-  "version": "1.11.23",
-  "md5": "6f99cfe1a992307b57b06dcea3b69b1d",
-  "release_date": "2026-01-16 11:41:20",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.23"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.25/wvd.zip",
+  "version": "1.11.25",
+  "md5": "6f10dcdd3b2f5c1286e5b35dd562bbc2",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.25",
+  "release_date": "2026-01-18 05:32:04"
 }
