deploy: b400d6ec96a42738be8866c51482cfbfc4e0e848

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.25/wvd.zip",
-  "version": "1.11.25",
-  "md5": "6f10dcdd3b2f5c1286e5b35dd562bbc2",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.25",
-  "release_date": "2026-01-18 05:32:04"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.26/wvd.zip",
+  "release_date": "2026-01-18 18:46:17",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.26",
+  "md5": "1422475e30b9551959eb8517d84c30c0",
+  "version": "1.11.26"
 }
