deploy: 84f0575715d0783931817e5623fd5c69501a6fd8

--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "0682ac174915291985ed8ee32b9cd447",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.28/wvd.zip",
-  "version": "1.11.28",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.28",
-  "release_date": "2026-01-19 14:09:34"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.29/wvd.zip",
+  "md5": "0146a4a46a14a85c6853101c1fcd60c7",
+  "release_date": "2026-01-19 14:39:59",
+  "version": "1.11.29",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.29"
 }
