--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.30/wvd.zip",
-  "version": "1.11.30",
-  "md5": "c0ad12442650f8964b9876adcf8ef08f",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.30",
-  "release_date": "2026-01-19 15:40:34"
+  "md5": "ed9fa14b70d4cae96d9a03cda2f57235",
+  "release_date": "2026-01-20 07:55:12",
+  "version": "1.11.31",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.31",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.31/wvd.zip"
 }
