--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "28ca68b3c99e07e45da7202d27367e8c",
+  "release_date": "2026-01-20 08:12:19",
+  "md5": "0d08053cf6e12f64cee94e1e8bec15eb",
+  "version": "1.11.31",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.31",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.31/wvd.zip",
-  "release_date": "2026-01-20 08:10:55",
-  "version": "1.11.31"
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.31/wvd.zip"
 }
