--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "release_date": "2026-01-20 08:12:19",
-  "md5": "0d08053cf6e12f64cee94e1e8bec15eb",
-  "version": "1.11.31",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.31",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.31/wvd.zip"
+  "version": "1.11.32",
+  "release_date": "2026-01-27 07:48:54",
+  "md5": "d7b39725307d0d48d888d161f28cf0c1",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.32/wvd.zip",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.32"
 }
