--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.11.32",
-  "release_date": "2026-01-27 07:48:54",
-  "md5": "d7b39725307d0d48d888d161f28cf0c1",
-  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.11.32/wvd.zip",
-  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.11.32"
+  "md5": "d3ee1dc54c2d20d01fa181453b933abe",
+  "download_url": "https://github.com/adolphlai/wvd/releases/download/1.12.0/wvd.zip",
+  "release_date": "2026-01-28 06:44:17",
+  "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.12.0",
+  "version": "1.12.0"
 }
