--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "md5": "d3ee1dc54c2d20d01fa181453b933abe",
   "download_url": "https://github.com/adolphlai/wvd/releases/download/1.12.0/wvd.zip",
-  "release_date": "2026-01-28 06:44:17",
   "release_notes": "https://github.com/adolphlai/wvd/releases/tag/1.12.0",
-  "version": "1.12.0"
+  "version": "1.12.0",
+  "md5": "2e2b56103025604dafea662a3491bc1a",
+  "release_date": "2026-01-28 06:44:52"
 }
